# Cyberpunk-Blender-add-on

./: .gitignore  README.md  blender_addon_tester-0.10.2-py3-none-any.whl  env.yml  pyproject.toml  run_tests.sh  run_tests_console.py
.github/: simple_build.yml
.github/workflows/: build_and_release.yml  ci.yml  simple_bk.yml  simple_build.yml  simple_release.yml
Blender Spoilers/: gltfscriptingtest.py
MeshExportASCII/: MeshExportASCII.csproj  MeshExportASCII.sln  Program.cs
MeshExportASCII/Common/: Half.cs
MeshExportGLTF/: MeshExportGLTF.csproj  MeshExportGLTF.sln  Program.cs
OpusCLI/: OpusToolZ.sln  OpusTools.cs  Program.cs
Parsing Morphs/: Parsing Morphs.csproj  Parsing Morphs.sln  Program.cs
Parsing Morphs/common/: DataStructs.cs
WolvenKit/test/: CyberpunkToolz.csproj  CyberpunkToolz.sln  GLTFNodesTest.csproj  GLTFNodesTest.sln  Program.cs
WolvenKit/test/Anim Experimental/: Program.cs
WolvenKit/test/Experimental/: MaterialEnum.cs  MaterialInit.cs  MaterialSet.cs  MaterialTypes.cs  WriterBot.cs
WolvenKit/test/Functions/: MaterialFunctions.cs  MeshFunctions.cs  MeshImportFunctions.cs  OpusFunctions.cs  OpusTools.cs  RigFunctions.cs  TargetFunctions.cs
WolvenKit/test/MaterialTypes/: MaterialEnum.cs  MaterialInit.cs  MaterialSet.cs  MaterialTypes.cs
docs/: README.md
gltf test/: ConsoleApp1.csproj  ConsoleApp1.sln  Program.cs
i_scene_cp77_gltf/: __init__.py  cyber_prefs.py  cyber_props.py  install_dependency.py  jsontool.py  vertex_color_presets.json
i_scene_cp77_gltf/animgraph_editor/: animNodeCategories.txt  nodes.py.bk  nodetree.py
i_scene_cp77_gltf/animtools/: __init__.py  anim_events.py  anim_ops.py  animtools.py  bartmoss_math.py  compat.py  constants.py  draw.py  facial.py  facial_ops.py  facial_setup_loader.py  generate_rigs.py  jali.py  jali_bridge.py  jali_core.py  jali_integration.py  pose_preview.py  rig_binding.py  rigify_ui.py  root_motion.py  solver.py  tracks.py  tracksolvers.py
i_scene_cp77_gltf/collisiontools/: __init__.py  collisions.py  templates.py
i_scene_cp77_gltf/exporters/: __init__.py  collision_export.py  glb_export  glb_export.py  hp_export.py  mi_export.py  mlmask_export.py  mlsetup_export.py  phys_export.py  physxHeightfieldWriter.py  sectors_export.py  terrainCollisions_export.py  write_rig.py
i_scene_cp77_gltf/i_scene_cp77_gltf/: cyber_prefs.py  install_dependency.py  jsontool.py
i_scene_cp77_gltf/icons/: cp77_icons.py
i_scene_cp77_gltf/importers/: __init__.py  attribute_import.py  collision_mesh_import.py  collision_mesh_json_import.py  entity_import.py  import_common.py  import_from_external.py  import_with_materials.py  mlsetup_import.py  npz_import.py  phys_import.py  read_rig.py  sector_import.py
i_scene_cp77_gltf/main/: animtools.py  bartmoss_functions.py  collisions.py  common.py  datashards.py  entity_import.py  exporters.py  material_registry.py  meshtools.py  npz_io.py  physmat_data.py  physmat_lib.py  script_manager.py  scripts.py  sector_import.py  setup.py
i_scene_cp77_gltf/material_types/: decal.py  decal_gradientmap_recolor.py  eye.py  eyegradient.py  eyeshadow.py  glass.py  glassdeferred.py  hair.py  hologram.py  humanskin.py  interior_mapping_nodegroups.py  invisible.py  meshDecalDoubleDiffuse.py  meshdecal.py  meshdecaldoublediffuse.py  meshdecalemissive.py  meshdecalgradientmaprecolor.py  meshdecalparallax.py  metalbase.py  metalbasedet.py  multilayer.py  multilayered.py  multilayeredTerrain.py  multilayeredclearcoat.py  parallaxscreen.py  parallaxscreentransparent.py  pbr_layer.py  signages.py  skin.py  speedtree.py  televisionad.py  unknown.py  vehicleDestrBlendshape.py  vehicledestrblendshape.py  vehiclelights.py  vehiclemeshdecal.py  window_parallax_interior_proxy.py
i_scene_cp77_gltf/materialtools/: __init__.py
i_scene_cp77_gltf/meshtools/: __init__.py  meshtools.py  verttools.py
i_scene_cp77_gltf/resources/: all_multilayered_resources.Material.json  all_multilayered_resources.glb  base.nodeData.json  base.worldTerrainCollisionNode.json  default.mlsetup.json  empty.streamingsector.json  hair_profile_template.hp.json  judy_full.glb  man_base_full.glb  man_big_full.glb  man_fat_full.glb  metal_base_template.mi.json  template.streamingblock.json  vertex_color_presets.json  woman_base.glb  woman_base.gltf  woman_base_full.glb
i_scene_cp77_gltf/scriptman/: __init__.py  scriptman_funcs.py  scriptman_ops.py
i_scene_cp77_gltf/scripts/: export_deletions.py  importpng.py
pxbridge/: CMakeLists.txt  README.md  pxbridge.cpp
tests/: __init__.py  test_import.py
(+177 files in other folders)
